# nac-collector

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DB_BGP_CALO.json  Dockerfile.test  MSD.json  README.md  README_catalyst_center.md  README_ndfc.md  TESTING.md  docker-compose.test.yml  endpoints_catalystcenter.yaml  endpoints_ise.yaml  endpoints_ndo.yaml  endpoints_sdwan.yaml  fab2.json  lab_vxlan_fab1.json  pyproject.toml  run_tests.sh  sanity-checks.sh  skaszlik-nac-fabric1.json
.github/workflows/: release.yml  test.yml  update-endpoints.yml
docs/: NDFC Developer Documentation.md  catalyst_center.md
endpoints/: endpoints_catalystcenter.yaml
examples/: endpoints_catalystcenter.yaml  endpoints_fmc.yaml  endpoints_ise.yaml  endpoints_ndfc.yaml  endpoints_sdwan.yaml  ndfc_map_config.yaml
host_vars/KRK-SITE1/: global.nac.yaml  underlay.nac.yaml
nac_collector/: NDFC_DEVELOPER_MAP.md  __init__.py  __main__.py  cisco_client.py  cisco_client_catalystcenter.py  cisco_client_device.py  cisco_client_fmc.py  cisco_client_ios_xe.py  cisco_client_ise.py  cisco_client_ndfc.py  cisco_client_ndo.py  cisco_client_sdwan.py  constants.py  device_inventory.py  endpoint_resolver.py  github_repo_wrapper.py  json_yaml_translator.py  resource_manager.py
nac_collector/cli/: main.py  options.py
nac_collector/controller/: __init__.py  base.py  catalystcenter.py  fmc.py  ise.py  meraki.py  ndfc.py  ndo.py  sdwan.py
nac_collector/device/: __init__.py  base.py  ios_xe.py  iosxe.py  iosxr.py  nxos.py
nac_collector/resources/: catalystcenter_lookups.json
nac_collector/resources/endpoint_overrides/: catalystcenter.yaml  ise.yaml  meraki.yaml  sdwan.yaml
nac_collector/resources/endpoints/: __init__.py  catalystcenter.yaml  endpoints_ise.yaml  endpoints_sdwan.yaml  fmc.yaml  ise.yaml  meraki.yaml  meraki_overrides.yaml  ndfc.yaml  sdwan.yaml
nac_collector/resources/lookups/: __init__.py  catalystcenter.yaml
scripts/: show_meraki_errors.py  update_endpoints.py
tests/integration/ise/: test_integration.py
tests/ise/integration/: test_integration.py
tests/ise/integration/fixtures/: endpoints.yaml  ise.json
tests/ise/unit/: test_authentication.py  test_ers_api_pagination.py  test_fetch_data.py  test_id_value_extraction.py  test_initialization.py
tests/ndfc/: __init__.py
tests/ndfc/unit/: __init__.py
tests/unit/: test_cisco_client.py  test_cisco_client_base.py  test_cisco_client_controller.py  test_cisco_client_device.py  test_cisco_client_ios_xe.py  test_cisco_client_iosxe.py  test_cisco_client_iosxr.py  test_cisco_client_nxos.py  test_cli_main.py  test_device_inventory.py  test_update_endpoints.py
tests/unit/ise/: test_authentication.py  test_ers_api_pagination.py  test_fetch_data.py  test_id_field_child_collection.py  test_id_value_extraction.py  test_initialization.py
tests/unit/ndfc/: test_authentication.py  test_fabric_id_extraction.py  test_initialization.py  test_msd_detection.py  test_vpc_entity_parsing.py
tests/unit/sdwan/: test_token_authentication.py
