[tool.poetry]
authors = ["Kuba Mazurkiewicz <kmazurki@cisco.com>"]
description = ""
name = "nac-collector"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
click = "^8.1.7"
gitpython = "^3.1.42"
python = "^3.9"
requests = "^2.31.0"
ruamel-yaml = "^0.18.6"
errorhandler = "^2.0.1"
urllib3 = "^2.5.0"

[tool.poetry.scripts]
nac-collector = "nac_collector.cli.main:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pre-commit = "^3.5"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.1"
ruff = "^0.5.6"
exceptiongroup = "^1.3.0"

[tool.mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
python_version = 3.9
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pytest.ini_options]
markers = ["unit", "integration"]
